# amethyst

./: Cargo.toml
src/: data_reader.rs  data_writer.rs  datareader.rs  datawriter.rs  game.rs  main.rs  net.rs  packet.rs  packets.rs  player.rs
src/game/: chat.rs  engine.rs  game_chat.rs  nbt.rs  packets.rs  player.rs  player_join.rs  position.rs  ray_tracing.rs  world.rs
src/game/world/: angle.rs  block.rs  chunk.rs  coords.rs  generator.rs  world.rs
src/net/: https.rs  login.rs  login_handler.rs  network_manager.rs  networkmanager.rs  newer_network_manager.rs  packet_listener.rs  server.rs  status.rs
src/packet/: disconnect_login.rs  disconnect_play.rs  encryption_request.rs  encryption_response.rs  handshake.rs  login_start.rs  login_success.rs  packet_handshake.rs  packet_login_start.rs  ping.rs  pong.rs  rawpacket.rs  status_request.rs  status_response.rs
src/utils/: arrays.rs
