[package]
name = "amethyst"
version = "0.1.0"
authors = ["MrPiva <gui.andreghetto2@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
lazy_static = "1.4.0"
openssl = "0.10.30"
json = "0.12.4"
rand = "0.7.3"
cfb8 = "0.6.0"
aes = "0.6.0"
regex = "1.4.3"
rustc-serialize = "0.3.24"
reqwest = { version = "0.10.8", features = ["blocking", "json"] }

[profile.release]
lto = true
panic = 'abort'