[package]
name = "amethyst"
version = "0.1.0"
authors = ["MrPiva <gui.andreghetto2@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
json = "0.12.4"
rand = "0.7.3"
cfb8 = "0.6.0"
aes = "0.6.0"
regex = "1.4.3"
rustc-serialize = "0.3.24"
mio = { version = "0.7.13", features = ["os-poll", "net"] }
arrayvec = "0.7.1"
bytemuck = "1.7.3"
openssl = "0.10.38"
fxhash = "0.2.1"
byteorder = "1.4.3"
libflate = "1.1.1"

[profile.release]
#lto = true